Phone numbers that span two lines are not detected. <rdar://problem/17601146> and https://bugs.webkit.org/show_bug.cgi?id=134808

Reviewed by Tim Horton.

* editing/Editor.cpp:
(WebCore::Editor::scanSelectionForTelephoneNumbers): After scanning a range from the TextIterator,
    create an "edge range" window around the end of the TextIterator range, and scan it.
    Also make sure to not accumulate duplicate ranges that might have showed up in both the
    TextIterator range and the edge window range.

Canonical link: https://commits.webkit.org/152793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171016 268f45cc-cd09-0410-ab3c-d52691b4dbfc